--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: "282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:${IMAGE_TAG}"
     ports: 
       - "80:9200"
-    mem_limit: 6500m
     environment:
       - "discovery.type=single-node"
-      - "ES_JAVA_OPTS=-Xms3500m -Xmx3500m"
+    env_file:
+      - .env
     volumes:
       - "/elasticsearch-data:/usr/share/elasticsearch/data"
     
