--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,16 @@ services:
     container_name: ll-es
     image: "282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:${IMAGE_TAG}"
     ports: 
-      - "80:9200"
+      - "90:9200"
     environment:
       - "discovery.type=single-node"
     env_file:
       - .env
     volumes:
       - "/elasticsearch-data:/usr/share/elasticsearch/data"
-    
-    
-
-    
+  bash:
+    container_name: restorer
+    image: curlimages/curl:latest
+    entrypoint: sh /restore-snapshot.sh
+    volumes:
+      - ./restore-snapshot.sh:/restore-snapshot.sh
