--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ deploy:
     secret_access_key: ${AWS_SECRET_ACCESS_KEY}
     region: eu-west-1
     app: link-lives-data
-    env: link-lives-data-3
+    env: link-lives-data-dev-03
     bucket: elasticbeanstalk-eu-west-1-282251075226
     edge: true
     on:
