--- a/docker-compose-elastic-beanstalk.yml
+++ b/docker-compose-elastic-beanstalk.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   ll-es:
     container_name: ll-es
-    image: "282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:${IMAGE_TAG}"
+    image: "282251075226.dkr.ecr.eu-west-1.amazonaws.com/linklives-elasticsearch:{image-tag}"
     ports: 
       - "90:9200"
     environment:
